--- a/01-intro.html
+++ b/01-intro.html
@@ -143,7 +143,7 @@ weight_kg
 <p>Alternatively, we can look at the <strong>Workspace</strong>. The workspace contains all variable names and assigned values that we currently work with. As long as they pop up in the workspace, they are universally available, which is why it's good to keep it clean to not accidentally overwriting a variable of function that you later use. It can be cleaned up typing <code>clear all</code>.</p>
 <h4 id="challenges">Challenges</h4>
 <ol style="list-style-type: decimal">
-<li>Draw diagrams showing what variables refer to what values after each statement in the following program:</li>
+<li>Predict the values of the variables after each statement in the following program:</li>
 </ol>
 <pre><code>mass = 47.5
 age = 122
@@ -213,7 +213,8 @@ age = age - 20</code></pre>
    32   34   35   29   28   38   39   25
 </code></pre>
 <p>{:class=&quot;out&quot;}</p>
-<p>Providing <code>:</code> as the index for a dimension selects <em>all</em> elements along that dimension. So, the index <code>(5, :)</code> selects the elements on row <code>5</code>, and <em>all</em> columns---effectively, the entire row. We can also select multiple rows,</p>
+<p>Providing <code>:</code> as the index for a dimension selects <em>all</em> elements along that dimension. So, the index <code>(5, :)</code> selects the elements on row <code>5</code>, and <em>all</em> columns---effectively, the entire row.</p>
+<p>The <code>:</code> (colon) operator <code>:</code> can also be used to select multiple rows and even determine the spacing. All we need to do is to define a start value, a <a href="../../gloss.html#stride">stride</a>, and an end value.</p>
 <div>
 <img src="img/matrix-multi-rows.svg" style="height:350px" alt="Accessing multiple rows"/>
 </div>
@@ -230,6 +231,7 @@ age = age - 20</code></pre>
 <div>
 <img src="img/matrix-multi-cols.svg" style="height:350px" alt="Accessing multiple columns"/>
 </div>
+<p>Instead of counting the rows ourselves, we can also use the <code>end</code> keyword:</p>
 <pre><code>M(:, 6:end)</code></pre>
 <p>{:class=&quot;in&quot;}</p>
 <pre><code>ans =
