--- a/02-loop.html
+++ b/02-loop.html
@@ -119,7 +119,7 @@ print -dpng &quot;patient_data-01.png&quot;</code></pre>
 <!-- FIXME: Maybe this should be in a box? -->
 
 <p>We have used the <code>:</code> (colon) operator before to access certain fields in an array.</p>
-<p>We can also use it to generate sequences in MATLAB and it will soon help us analyzing multiple data sets:</p>
+<p>We can also use it to generate sequences:</p>
 <pre><code>4:10</code></pre>
 <p>{:class=&quot;in&quot;} <sub>~</sub> ans =</p>
 <pre><code>4    5    6    7    8    9   10</code></pre>
@@ -338,9 +338,32 @@ end</code></pre>
 <p>Sure enough, the maxima of these data sets show exactly the same ramp as the first, and their minima show the same staircase structure.</p>
 <h4 id="challenges-2">Challenges</h4>
 <ol style="list-style-type: decimal">
-<li>Templates can also be used to display certain values on the screen. Use a loop and templates to display the mean, the maximum, and the minimum of each data file in the following format:</li>
+<li>In cases where our file names don't follow such a regular pattern, we might want to process all files that end with a given extension, say <code>.csv</code>. At the command line we could get this list of files by using a <a href="../../gloss.html#wildcard">wildcard</a>:</li>
 </ol>
-<p>The average inflammation value in file (filename) is (value).</p>
+<p><sub>~</sub> ls *.csv <sub>~</sub> {:class=&quot;in&quot;}</p>
+<p>Thankfully, Matlab also has <code>ls</code>, though it returns a single long string:</p>
+<p><sub>~</sub> filestr = ls('*.csv') <sub>~</sub> {:class=&quot;in&quot;}</p>
+<p><sub>~</sub> inflammation-01.csv inflammation-04.csv inflammation-07.csv inflammation-10.csv inflammation-02.csv inflammation-05.csv inflammation-08.csv inflammation-11.csv inflammation-03.csv inflammation-06.csv inflammation-09.csv inflammation-12.csv <sub>~</sub> {:class=&quot;out&quot;}</p>
+<p>To turn this string into an array we can loop over (actually, a <a href="http://www.mathworks.com/help/matlab/cell-arrays.html">Cell Array</a>), we need to &quot;split&quot; the string at each occurrence of whitespace:</p>
+<p><sub>~</sub> file_string = ls('*.csv'); file_list = strsplit(file_string) <sub>~</sub> {:class=&quot;in&quot;}</p>
+<p><sub>~</sub> file_list =</p>
+<pre><code> Columns 1 through 3
+
+   &#39;inflammation-01.csv&#39;    &#39;inflammation-04.csv&#39;    &#39;inflammation-07.csv&#39;
+
+ Columns 4 through 6
+
+   &#39;inflammation-10.csv&#39;    &#39;inflammation-02.csv&#39;    &#39;inflammation-05.csv&#39;
+
+ Columns 7 through 9
+
+   &#39;inflammation-08.csv&#39;    &#39;inflammation-11.csv&#39;    &#39;inflammation-03.csv&#39;
+
+ Columns 10 through 13
+
+   &#39;inflammation-06.csv&#39;    &#39;inflammation-09.csv&#39;    &#39;inflammation-12.csv&#39;    &#39;&#39;</code></pre>
+<p><sub>~</sub> {:class=&quot;out&quot;}</p>
+<p>Using this trick, rewrite the <code>analyze</code> script to analyze all <code>csv</code> files in the current directory. Be careful of the empty string <code>''</code> at the end of <code>file_list</code>!</p>
 <div class="keypoints" markdown="1">
 <h4 id="key-points">Key Points</h4>
 <ul>
