--- a/03-func.html
+++ b/03-func.html
@@ -31,10 +31,10 @@
 <div class="objectives" markdown="1">
 <h4>Objectives</h4>
 <ul>
-<li>Explain a Matlab function file</li>
-<li>Define a function that takes parameters</li>
+<li>Explain a Matlab function file.</li>
+<li>Define a function that takes parameters.</li>
 <li>Test and debug a function.</li>
-<li>Explain what a call stack is, and trace changes to the call stack as functions ar ecalled.</li>
+<li>Explain what a call stack is, and trace changes to the call stack as functions are called.</li>
 <li>Set default values for function parameters.</li>
 <li>Explain why we should divide programs into small, single-purpose functions.</li>
 </ul>
@@ -47,12 +47,15 @@ function ktemp = fahr_to_kelvin(ftemp)
     ktemp = ((ftemp - 32) * (5/9)) + 273.15;
 end</code></pre>
 <p>{:class=&quot;in&quot;}</p>
-<p>A Matlab function <em>must</em> be saved in a text file with a <code>.m</code> extension. The name of that file must be the same as the function defined inside it. So, you will need to save the above code in a file called <code>fahr_to_kelvin.m</code>.</p>
+<p>A Matlab function <em>must</em> be saved in a text file with a <code>.m</code> extension. The name of that file must be the same as the function defined inside it. The name must start with a letter and cannot contain spaces. So, you will need to save the above code in a file called <code>fahr_to_kelvin.m</code>.</p>
 <!-- FIXME: 00-basics lesson should talk about .m files, and
     the variable `ans` -->
+
 <!-- FIXME: Nothing about Comments? -->
+
 <!-- FIXME: this lesson should talk about multiple functions in a
     single file -->
+
 <p>The first line of our function:</p>
 <pre><code>function ktemp = fahr_to_kelvin(ftemp)</code></pre>
 <p>is called the <em>function definition</em>, and it declares that we're writing a function named <code>fahr_to_kelvin</code>, that accepts a single parameter, <code>ftemp</code>, and outputs a single value, <code>ktemp</code>. Anything following the function definition line is called the <em>body</em> of the function. The keyword <code>end</code> marks the end of the function body, and the function won't know about any code after <code>end</code>.</p>
@@ -65,6 +68,7 @@ end</code></pre>
 <p>When we pass a value, like <code>32</code>, to the function, the value is assigned to the variable <code>ftemp</code> so that it can be used inside the function. If we want to return a value from the function, we must assign that value to a variable named <code>ktemp</code>---in the first line of our function, we promised that the output of our function would be named <code>ktemp</code>.</p>
 <p>Outside of the function, the names <code>ftemp</code> and <code>ktemp</code> don't matter, they are only used by the function body to refer to the input and output values.</p>
 <!-- FIXME: make up a debugging scenario -->
+
 <h3 id="composing-functions">Composing Functions</h3>
 <p>Now that we've seen how to turn Fahrenheit to Kelvin, it's easy to turn Kelvin to Celsius.</p>
 <pre><code>% file kelvin_to_celsius.m
@@ -110,66 +114,11 @@ final = fahr_to_celcius(original);</code></pre>
 <p>{:class=&quot;in&quot;}</p>
 <p>The diagram below shows what memory looks like after the first line has been executed:</p>
 <!-- FIXME: Writeup about Call Stacks -->
-<h3 id="testing-and-documentation">Testing and Documentation</h3>
-<p>Once we start putting things in functions so that we can re-use them, we need to start testing that those functions are working correctly. To see how to do this, let's write a function to center a dataset around a particular value:</p>
-<pre><code>function out = center(data, desired)
-    out = (data - mean(data)) + desired
-end</code></pre>
-<p>{:class=&quot;in&quot;}</p>
-<p>We could test this on our actual data, but since we don't know what the values ought to be, it will be hard to tell if the result was correct, Instead, let's use to create a matrix of 0's, and then center that around 3:</p>
-<pre><code>z = zeros(2,2);
-center(z, 3)</code></pre>
-<p>{:class=&quot;in&quot;}</p>
-<pre><code>ans =
 
-   3   3
-   3   3</code></pre>
-<p>{:class=&quot;out&quot;}</p>
-<p>That looks right, let's try center on our real data:</p>
-<pre><code>data = csvread(&#39;inflammation-01.csv&#39;);
-centered = center(data(:), 0)</code></pre>
-<p>{:class=&quot;in&quot;}</p>
-<p>It's hard to tell from the default output whether the result is correct--this is often the case when working with fairly large arrays--but, there are a few simple tests that will reassure us.</p>
-<p>Let's calculate some simple statistics:</p>
-<pre><code>disp([min(data(:)), mean(data(:)), max(data(:))])</code></pre>
-<p>{:class=&quot;in&quot;}</p>
-<pre><code>0.00000    6.14875   20.00000</code></pre>
-<p>{:class=&quot;out&quot;}</p>
-<p>And let's do the same after applying our <code>center</code> function to the data:</p>
-<pre><code>disp([min(centered(:)), mean(centered(:)), max(centered(:))])</code></pre>
-<p>{:class=&quot;in&quot;}</p>
-<pre><code>-6.1487e+00  -2.2962e-14   1.3851e+01</code></pre>
-<p>{:class=&quot;out&quot;}</p>
-<!-- FIXME: challenge -->
-<p>That seems almost right, the original mean was about 6.1, so the lower bound from zero is now about -6.1. The mean of the centered data isn't quite zero--we'll explore why not in the challenges--but it's pretty close. We can even go further and check that the standard deviation hasn't changed:</p>
-<pre><code>std(data(:)) - std(centered)</code></pre>
-<p>{:class=&quot;in&quot;}</p>
-<pre><code>5.3291e-15</code></pre>
-<p>{:class=&quot;out&quot;}</p>
-<p>The difference is very small. It's still possible that our function is wrong, but it seems unlikely enough that we should probable get back to doing our analysis. We have one more task first, though: we should write some <a href="../../gloss.html#documentation">documentation</a> for our function to remind ourselves later what it's for and how to use it.</p>
-<pre><code>function out = center(data, desired)
-    %   Center data around a desired value.
-    %
-    %       center(DATA, DESIRED)
-    %
-    %   Returns a new array containing the values in
-    %   DATA centered around the value.
 
-    out = (data  - mean(data)) + desired;
-end</code></pre>
-<p>{:class=&quot;in&quot;}</p>
-<p>Comment lines immediately below the function definition line are called &quot;help text&quot;. Typing <code>help function_name</code> brings up the help text for that function:</p>
-<pre><code>help center</code></pre>
-<p>{:class=&quot;in&quot;}</p>
-<pre><code>Center data around a desired value.
-
-    center(DATA, DESIRED)
-
-Returns a new array containing the values in
-DATA centered around the value.</code></pre>
-<p>{:class=&quot;out&quot;}</p>
 <h4 id="challenges-1">Challenges</h4>
 <ol style="list-style-type: decimal">
+<li><p>Turn the script that analyzes our patient data into a function that only looks at a certain subset of the files, defined by the input variable &quot;range&quot;.</p></li>
 <li><p>Write a function called <code>rescale</code> that takes an array as input and returns an array of the same shape with its values scaled to lie in the range 0.0 to 1.0. (If L and H are the lowest and highest values in the input array, respectively, then the function should map a value v to (v - L)/(H - L).) Be sure to give the function a comment block explaining its use.</p></li>
 <li><p>Run <code>help linspace</code> to see how to use this function to generate regularly-spaced values. Use arrays like this to test your <code>rescale</code> function.</p></li>
 <li><p>Write a function <code>run_analysis</code> that accepts a filename as parameter, and displays the three graphs produced in the previous lesson, i.e., <code>run_analysis('inflammation-01.csv')</code> should produce the corresponding graphs for the first data set. Be sure to give your function help text.</p></li>
