add an image to 01-intro

--- a/01-intro.html
+++ b/01-intro.html
@@ -27,7 +27,7 @@
         <div class="span10 offset1">
           <h1 class="title">Programming with MATLAB</h1>
           <h2 class="subtitle">Analyzing Patient Data</h2>
-<div id="learning-objectives" class="objectives objectives">
+<div id="learning-objectives" class="objectives">
 <h2>Learning Objectives</h2>
 <ul>
 <li>Get to know the MATLAB environment.</li>
@@ -406,6 +406,7 @@ ylabel(<span class="st">&#39;max&#39;</span>)
 subplot(<span class="fl">1</span>, <span class="fl">2</span>, <span class="fl">2</span>);
 plot(min(patient_data, [], <span class="fl">1</span>));
 ylabel(<span class="st">&#39;min&#39;</span>)</code></pre>
+<p><img src="fig/01-intro_5.png" style="height:350px"></p>
 <p>Our work so far has convinced us that something is wrong with our first data file. We would like to check the other 11 the same way, but typing in the same commands repeatedly is tedious and error-prone. Since computers don't get bored (that we know of), we should create a way to do a complete analysis with a single command, and then figure out how to repeat that step once for each file. These operations are the subjects of the next two lessons.</p>
         </div>
       </div>
