--- a/02-scripts.html
+++ b/02-scripts.html
@@ -28,10 +28,10 @@
           <h1 class="title">Programming with MATLAB</h1>
           <h2 class="subtitle">Writing MATLAB Scripts</h2>
 <blockquote>
-<h2>Learning Objectives</h2>
+<h2 id="learning-objectives">Learning Objectives</h2>
 <ul>
 <li>Learn how to write and save MATLAB scripts.</li>
-<li>Learn how to save MATLBA plots to disk.</li>
+<li>Learn how to save MATLAB plots to disk.</li>
 </ul>
 </blockquote>
 <p>So far, we've typed in commands one-by-one on the command line to get MATLAB to do things for us. But what if we want to repeat our analysis? Sure, it's only a handful of commands, and typing them in shouldn't take us more than a few minutes. But if we forget a step or make a mistake, we'll waste time rewriting commands. Also, we'll quickly find ourselves doing more complex analyses, and we'll need our results to be more easily reproducible.</p>
