--- a/index.html
+++ b/index.html
@@ -37,9 +37,11 @@
 <p>But the two most important things are to use whatever language your colleagues are using, so that you can share you work with them easily, and to use that language <em>well</em>.</p>
 <ol style="list-style-type: decimal">
 <li><a href="01-intro.html">Analyzing Patient Data</a></li>
-<li><a href="02-loop.html">Reusing Code</a></li>
-<li><a href="03-func.html">Creating Functions</a></li>
-<li><a href="04-cond.html">Making Choices</a></li>
+<li><a href="02-scripts.html">Reusing Code</a></li>
+<li><a href="03-loop.html">Repeating With Loops</a></li>
+<li><a href="04-func.html">Creating Functions</a></li>
+<li><a href="05-cond.html">Making Choices</a></li>
+<li><a href="06-defensive.html">Defensive Programming</a></li>
 </ol>
         </div>
       </div>
