--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 <ol style="list-style-type: decimal">
 <li><a href="01-intro.html">Analyzing Patient Data</a></li>
 <li><a href="02-scripts.html">Reusing Code</a></li>
-<li><a href="03-loop.html">Repeating With Loops</a></li>
+<li><a href="03-loops.html">Repeating With Loops</a></li>
 <li><a href="04-func.html">Creating Functions</a></li>
 <li><a href="05-cond.html">Making Choices</a></li>
 <li><a href="06-defensive.html">Defensive Programming</a></li>
