rename 04-cond.md => 05-cond.md

--- a/05-cond.html
+++ b/05-cond.html
@@ -26,7 +26,7 @@
       <div class="row-fluid">
         <div class="span10 offset1">
           <h1 class="title">Programming with MATLAB</h1>
-          <h2 class="subtitle">Using Conditional Statements</h2>
+          <h2 class="subtitle">Making Choices</h2>
 <div id="learning-objectives" class="objectives">
 <h2>Learning Objectives</h2>
 <ul>
