avoided uploading the huge dataset

--- a/bioeng-example-lesson.html
+++ b/bioeng-example-lesson.html
@@ -40,7 +40,7 @@
 </div>
 </div>
 <p>Some researchers were able to control a quadrocoptor with <a href="https://www.youtube.com/watch?v=-h3kiws4I54">nothing but thoughts</a>. Now we want to replicate this work. <img src="img/quadrocoptor.png" style="height:350px"></p>
-<p>To do this, first we need to measure brain activity. This can be done using EEG (electroencephalogram). A test participant wears a cap with embedded electrodes. The participant then repeatedly moves their left or right hand or no hand at all, while we measure the electric field with the electrodes. Luckily this data has already been recorded and can be downloaded <a href="https://github.com/EwanNurse/A-Generalizable-BCI-using-Machine-Learning-for-Feature-Discovery/tree/master/data">here</a>.</p>
+<p>To do this, first we need to measure brain activity. This can be done using EEG (electroencephalogram). A test participant wears a cap with embedded electrodes. The participant then repeatedly moves their left or right hand or no hand at all, while we measure the electric field with the electrodes. Luckily this data has already been recorded and can be downloaded <a href="https://github.com/EwanNurse/A-Generalizable-BCI-using-Machine-Learning-for-Feature-Discovery/tree/master/data">here</a>. We'll be using 'EEG_ParticipantB_30_09_2013.mat'.</p>
 <p>Once we have downloaded the first data file, we want to:</p>
 <ul>
 <li>load this data into memory</li>
