--- a/index.html
+++ b/index.html
@@ -23,14 +23,15 @@
           <img alt="Software Carpentry banner" src="img/software-carpentry-banner.png" />
         </a>
       </div>
+      <article>
       <div class="row">
         <div class="col-md-10 col-md-offset-1">
           <h1 class="title">Programming with MATLAB</h1>
           
-<p>The best way to learn how to program is to do something useful, so this introduction to MATLAB is built around a common scientific task: data analysis. Our real goal isn't to teach you MATLAB, but to teach you the basic concepts that all programming depends on. We use MATLAB in our lessons because:</p>
+<p>The best way to learn how to program is to do something useful, so this introduction to MATLAB is built around a common scientific task: data analysis. Our real goal isn’t to teach you MATLAB, but to teach you the basic concepts that all programming depends on. We use MATLAB in our lessons because:</p>
 <ol style="list-style-type: decimal">
 <li>we have to use <em>something</em> for examples;</li>
-<li>it's well-documented;</li>
+<li>it’s well-documented;</li>
 <li>it has a large (and growing) user base among scientists in academia and the industry; and</li>
 <li>it has a large library of packages available for performing diverse tasks.</li>
 </ol>
@@ -46,6 +47,7 @@
 </ol>
         </div>
       </div>
+      </article>
       <div class="footer">
         <a class="label swc-blue-bg" href="http://software-carpentry.org">Software Carpentry</a>
         <a class="label swc-blue-bg" href="https://github.com/swcarpentry/matlab-novice-inflammation">Source</a>
