remove line about SQL

--- a/reference.html
+++ b/reference.html
@@ -55,7 +55,7 @@
 <dd><p>Treating text as if upper and lower case characters of the same letter are different. See also: <a href="#case-insensitive">case-insensitive</a>.</p>
 </dd>
 <dt><span id="comment">comment</span></dt>
-<dd><p>A remark in a program that is intended to help human readers understand what is going on, but is ignored by the computer. Comments in MATLAB start with a <code>%</code> character and run to the end of the line; comments in SQL start with <code>--</code>, and other languages have other conventions.</p>
+<dd><p>A remark in a program that is intended to help human readers understand what is going on, but is ignored by the computer. Comments in MATLAB start with a <code>%</code> character and run to the end of the line;</p>
 </dd>
 <dt><span id="compose">compose</span></dt>
 <dd><p>To apply one function to the result of another, such as <code>f(g(x))</code>.</p>
