--- a/discussion.html
+++ b/discussion.html
@@ -27,33 +27,10 @@
       <div class="row">
         <div class="col-md-10 col-md-offset-1">
           <h1 class="title">Programming with MATLAB</h1>
-          
-<p>The best way to learn how to program is to do something useful, so this introduction to MATLAB is built around a common scientific task: data analysis. Our real goal isn’t to teach you MATLAB, but to teach you the basic concepts that all programming depends on. We use MATLAB in our lessons because:</p>
-<ol style="list-style-type: decimal">
-<li>we have to use <em>something</em> for examples;</li>
-<li>it’s well-documented;</li>
-<li>it has a large (and growing) user base among scientists in academia and the industry; and</li>
-<li>it has a large library of packages available for performing diverse tasks.</li>
-</ol>
-<p>But the two most important things are to use whatever language your colleagues are using, so that you can share you work with them easily, and to use that language <em>well</em>.</p>
-<h2 id="topics">Topics</h2>
-<ol style="list-style-type: decimal">
-<li><a href="01-intro.html">Analyzing Patient Data</a></li>
-<li><a href="02-scripts.html">Writing MATLAB Scripts</a></li>
-<li><a href="03-loops.html">Repeating With Loops</a></li>
-<li><a href="04-func.html">Creating Functions</a></li>
-<li><a href="05-cond.html">Making Choices</a></li>
-<li><a href="06-defensive.html">Defensive Programming</a></li>
-</ol>
-<div id="prerequisites" class="prereq panel panel-warning">
-<div class="panel-heading">
-<h2><span class="glyphicon glyphicon-education"></span>Prerequisites</h2>
-</div>
-<div class="panel-body">
-
-</div>
-</div>
-<h2 id="other-resources">Other Resources</h2>
+          <h2 class="subtitle">Discussion</h2>
+<h1 id="motivation">Motivation</h1>
+<p>Here is a great article discussing the need for better practices in scientific computing:</p>
+<p>http://www.americanscientist.org/issues/id.3473,y.0,no.,content.true,page.1,css.print/issue.aspx</p>
         </div>
       </div>
       </article>
