--- a/motivation.html
+++ b/motivation.html
@@ -35,15 +35,15 @@
 <li>predict the physics of aircraft,</li>
 <li>develop atomic and molecular models to better understand matter,</li>
 <li>simulate the motion of planets, stars and galaxies, and</li>
-<li>study the biological processes that form the building blocks of life</li>
+<li>study the biological processes that form the building blocks of life.</li>
 </ul></li>
 </ul>
 </section>
 <section id="the-problem-1" class="slide level2">
 <h1>The Problem</h1>
 <ul>
-<li><p>But for every successful simulation of global climate, there are a dozen more groups struggling just to get their program to run</p></li>
-<li><p>Many of them tweak and tinker for months, or years, till their code does something more than produce zeros, or grind to a halt</p></li>
+<li><p>But for every successful simulation of global climate, there are a dozen more groups struggling just to get their program to run.</p></li>
+<li><p>Many of them tweak and tinker for months, or years, till their code does something more than produce zeros, or grind to a halt.</p></li>
 </ul>
 </section>
 <section id="the-solution" class="slide level2">
@@ -54,7 +54,7 @@
 <li>writing programs that are well-documented,</li>
 <li>properly reusing code in programs,</li>
 <li>automating tasks that are done often, and</li>
-<li>systematically finding and fixing bugs when they appear</li>
+<li>systematically finding and fixing bugs when they appear.</li>
 </ul></li>
 </ul>
 </section>
@@ -63,7 +63,7 @@
 <ul>
 <li>The good news is that none of this is rocket science</li>
 <li>Like callibrating an oscilloscope, or titrating a solution, they are skills that are quickly picked up, and become easier with practice</li>
-<li>…and they will be the focus of today’s lesson</li>
+<li>…and they will be the focus of today’s lesson.</li>
 </ul>
 </section>
 <section id="why-matlab" class="slide level2">
@@ -74,7 +74,7 @@
 <li>we have to use <em>something</em> for our lesson,</li>
 <li>it’s well documented,</li>
 <li>it has a large user base among scientists in academia and the industry, and</li>
-<li>it has a large library of packages for performing diverse tasks</li>
+<li>it has a large library of packages for performing diverse tasks.</li>
 </ul></li>
 </ul>
 </section>
@@ -94,7 +94,7 @@
 <section id="todays-lesson-1" class="slide level2">
 <h1>Today’s Lesson</h1>
 <ul>
-<li>…and along the way, learn some good programming practices, that will save us plenty of time, sweat and tears in the long run</li>
+<li>…and along the way, learn some good programming practices, that will save us plenty of time, sweat and tears in the long run.</li>
 </ul>
 </section>
     <!-- End slides. -->
