--- a/motivation.html
+++ b/motivation.html
@@ -84,10 +84,10 @@
 <li>In today’s lesson, we’ll learn how to
 <ul>
 <li>load, analyze and visualize data in MATLAB,</li>
-<li>learn how to get our program to <em>repeat</em> tasks by writing <em>loops</em>,</li>
-<li>learn how to get our programs to <em>make decisions</em> using <em>conditionals</em>,</li>
-<li>learn how to make our code <em>reusable</em> by writing <em>scripts</em> and <em>functions</em>,</li>
-<li>learn how to write programs that <em>check themselves</em> for bugs,</li>
+<li>get our program to <em>repeat</em> tasks by writing <em>loops</em>,</li>
+<li>get our programs to <em>make decisions</em> using <em>conditionals</em>,</li>
+<li>make our code <em>reusable</em> by writing <em>scripts</em> and <em>functions</em>,</li>
+<li>write programs that <em>check themselves</em> for bugs,</li>
 </ul></li>
 </ul>
 </section>
