some more punctuation

--- a/motivation.html
+++ b/motivation.html
@@ -61,7 +61,7 @@
 <section id="the-solution-1" class="slide level2">
 <h1>The Solution</h1>
 <ul>
-<li>The good news is that none of this is rocket science</li>
+<li>The good news is that none of this is rocket science.</li>
 <li>Like callibrating an oscilloscope, or titrating a solution, they are skills that are quickly picked up, and become easier with practice</li>
 <li>…and they will be the focus of today’s lesson.</li>
 </ul>
