--- a/index.html
+++ b/index.html
@@ -50,7 +50,12 @@
 <h2><span class="glyphicon glyphicon-education"></span>Prerequisites</h2>
 </div>
 <div class="panel-body">
-
+<p>To begin tackling this lesson, you will need to:</p>
+<ul>
+<li>Understand the concepts of files and directories, and the concept of a “working directory”.</li>
+<li>Know how to start up MATLAB, and access the <em>command window</em> (which generally has a <code>&gt;&gt;</code> prompt).</li>
+<li>Know how to create, edit and save text files.</li>
+</ul>
 </div>
 </div>
 <h2 id="other-resources">Other Resources</h2>
