--- a/index.html
+++ b/index.html
@@ -59,6 +59,12 @@
 </div>
 </div>
 <h2 id="other-resources">Other Resources</h2>
+<ul>
+<li><a href="motivation.html">Motivation</a></li>
+<li><a href="reference.html">Reference</a></li>
+<li><a href="instructors.html">Instructor’s Guide</a></li>
+<li><a href="discussion.html">Discussion</a></li>
+</ul>
         </div>
       </div>
       </article>
