--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <div class="col-md-10 col-md-offset-1">
           <h1 class="title">Programming with MATLAB</h1>
           
-<p>The best way to learn how to program is to do something useful, so this introduction to MATLAB is built around a common scientific task: data analysis. Our real goal isn’t to teach you MATLAB, but to teach you the basic concepts that all programming depends on. We use MATLAB in our lessons because:</p>
+<p>The best way to learn how to program is to do something useful, so this introduction to <a href="https://en.wikipedia.org/wiki/MATLAB">MATLAB</a> is built around a common scientific task: data analysis. Our real goal isn’t to teach you MATLAB, but to teach you the basic concepts that all programming depends on. We use MATLAB in our lessons because:</p>
 <ol style="list-style-type: decimal">
 <li>we have to use <em>something</em> for examples;</li>
 <li>it’s well-documented;</li>
