Removing last references to motivational material and regenerating HTML

--- a/discussion.html
+++ b/discussion.html
@@ -26,9 +26,9 @@
       <article>
       <div class="row">
         <div class="col-md-10 col-md-offset-1">
-          <h1 class="title">Programming with MATLAB</h1>
+                    <a href="index.html"><h1 class="title">Programming with MATLAB</h1></a>
           <h2 class="subtitle">Discussion</h2>
-<h2 id="motivation">Motivation</h2>
+          <h2 id="motivation">Motivation</h2>
 <p>Here is a great article discussing the need for better practices in scientific computing:</p>
 <p>http://www.americanscientist.org/issues/num2/wheres-the-real-bottleneck-in-scientific-computing/1</p>
         </div>
