--- a/instructors.html
+++ b/instructors.html
@@ -26,9 +26,9 @@
       <article>
       <div class="row">
         <div class="col-md-10 col-md-offset-1">
-          <h1 class="title">Programming with MATLAB</h1>
+                    <a href="index.html"><h1 class="title">Programming with MATLAB</h1></a>
           <h2 class="subtitle">Instructor’s Guide</h2>
-<h2 id="legend">Legend</h2>
+          <h2 id="legend">Legend</h2>
 <h2 id="overall">Overall</h2>
         </div>
       </div>
