Changes in index.html resulting from commit b624092

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 <ol style="list-style-type: decimal">
 <li>we have to use <em>something</em> for examples;</li>
 <li>it’s well-documented;</li>
-<li>it has a large (and growing) user base among scientists in academia and the industry; and</li>
+<li>it has a large (and growing) user base among scientists in academia and industry; and</li>
 <li>it has a large library of packages available for performing diverse tasks.</li>
 </ol>
 <p>But the two most important things are to use whatever language your colleagues are using, so that you can share you work with them easily, and to use that language <em>well</em>.</p>
