Corrects the terminology - in this lesson things returned are values, not objects.

--- a/03-loops.html
+++ b/03-loops.html
@@ -285,7 +285,7 @@ Columns 10 through 13
 <h2><span class="glyphicon glyphicon-pushpin"></span>GNU Octave</h2>
 </div>
 <div class="panel-body">
-<p>Lastly, in the above trick using <code>ls</code> with the wildcard <code>*</code>, another small Octave/MATLAB difference shows up. In Octave, the object returned by <code>filestr = ls('path/to/data/*.csv')</code> is an array of strings, so we can loop over filestr directly without the need to split it with <code>strsplit</code>.</p>
+<p>Lastly, in the above trick using <code>ls</code> with the wildcard <code>*</code>, another small Octave/MATLAB difference shows up. In Octave, the value returned by <code>filestr = ls('path/to/data/*.csv')</code> is an array of strings, so we can loop over filestr directly without the need to split it with <code>strsplit</code>.</p>
 </div>
 </aside>
         </div>
