fix conflict markers in 04-cond.html and update 03-loops.html

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <li>it has a large (and growing) user base among scientists in academia and industry; and</li>
 <li>it has a large library of packages available for performing diverse tasks.</li>
 </ol>
-<p>But the two most important things are to use whatever language your colleagues are using, so that you can share you work with them easily, and to use that language <em>well</em>.</p>
+<p>But the two most important things are to use whatever language your colleagues are using, so that you can share your work with them easily, and to use that language <em>well</em>.</p>
 <aside class="callout panel panel-info">
 <div class="panel-heading">
 <h2><span class="glyphicon glyphicon-pushpin"></span>GNU Octave</h2>
