--- a/03-loops.html
+++ b/03-loops.html
@@ -251,6 +251,7 @@ end</code></pre>
 <p><img src="img/02-loop_2.png" style="width:500px; height:400px"></p>
 <p><img src="img/02-loop_3.png" style="width:500px; height:400px"></p>
 <p>Sure enough, the maxima of these data sets show exactly the same ramp as the first, and their minima show the same staircase structure.</p>
+<p>We’ve now automated the analysis and have confirmed that all the data files show the same artifact. This is what we set out to test, and now we can just call one function to do it. With minor modifications, this function could be re-used to check all our future data files.</p>
 <section class="challenge panel panel-success">
 <div class="panel-heading">
 <h2><span class="glyphicon glyphicon-pencil"></span>Another Way to Analyze Multiple Files</h2>
